[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapapi"
version = "1.2.0"
description = "Official Python SDK for SnapAPI - Lightning-fast screenshot API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "SnapAPI", email = "support@snapapi.dev"}
]
keywords = [
    "screenshot",
    "api",
    "webpage",
    "capture",
    "url-to-image",
    "web-screenshot",
    "snapapi"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://snapapi.pics"
Documentation = "https://snapapi.pics/docs"
Repository = "https://github.com/Sleywill/snapapi-python"
Issues = "https://github.com/Sleywill/snapapi-python/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["snapapi*"]

[tool.mypy]
python_version = "3.8"
strict = true

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.pytest.ini_options]
testpaths = ["tests"]
