[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snapapi"
version = "3.0.0"
description = "Official Python SDK for SnapAPI - Lightning-fast screenshot, scrape, extract, and analyze API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "SnapAPI", email = "support@snapapi.pics"}
]
keywords = [
    "screenshot",
    "api",
    "webpage",
    "capture",
    "url-to-image",
    "web-screenshot",
    "scrape",
    "extract",
    "pdf",
    "video",
    "analyze",
    "snapapi",
    "async",
    "httpx",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://snapapi.pics"
Documentation = "https://snapapi.pics/docs"
Repository = "https://github.com/Sleywill/snapapi-python"
Issues = "https://github.com/Sleywill/snapapi-python/issues"
Changelog = "https://github.com/Sleywill/snapapi-python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "respx>=0.20.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
include = ["snapapi*"]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["snapapi"]
omit = ["snapapi/_http.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80
